2003-09-11 Damien McGinnes 

	* Mercator/Intersect.cpp,h: added ray intersection with terrain
	  not complete yet, ray/triangle tests not added
	* tests/testIntersect.cpp: added ray intersection test -  not finished

2003-09-10 Damien McGinnes 

	* Mercator/Intersect.cpp,h: added point intersection with terrain
	  and height over terrain functions

2003-09-10 Damien McGinnes 

	* Mercator/Intersect.cpp,h: added files for axisbox intersection
	  with terrain
	* tests/testIntersect.cpp: added files for intersection unit tests

2003-09-06 Damien McGinnes 

	* Mercator/Surface.cpp: fixed a segfault in invalidate; slight
	  cleanup to the rounding code in clipToSegment.

2003-09-03  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Surface.h: Use <climits> to get the max value of
	  a char.

	* Mercator/Surface.cpp, Mercator/Buffer.h, Mercator/Buffer_impl.h:
	  Modify buffers and thus surfaces to handle their memory
	  dynamically, providing facilities for allocating and
	  deleting the buffer.

	* Mercator/Segment.h, Mercator/Segment.cpp: Implement easier
	  memory management, getting rid of the flags for points and
	  normals, using the value of the pointer instead.
	  Add a few to be called to cause the segment to free its
	  data, with the option to keep hold of the height field.

2003-09-01  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.h, Mercator/Terrain.cpp: Add new
	  getHeightAndNormal() method which makes available the method
	  of the same name from Segment on the whole terrain.

2003-08-31  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Shader.h: Add default arguments for constructor,
	  which default to alpha channel only.

	* Mercator/ThresholdShader.cpp, Mercator/GrassShader.cpp,
	  Mercator/FillShader.cpp, Mercator/DepthShader.cpp:
	  Stop specifying arguements to the shader constructor, and thus
	  accept the defaults. Net effect is that surface buffers now
	  just contain alpha values by default.

2003-08-22 Damien McGinnes
