@@ -1,3 +1,9 @@
+2003-09-12 Damien McGinnes 
+
+	* Mercator/Intersect.cpp,h: maybe finished ray intersection
+	  needs more testing
+	* tests/testIntersect.cpp: added more tests
+
 2003-09-11 Damien McGinnes 
 
 	* Mercator/Intersect.cpp,h: added ray intersection with terrain
